--- a/lab.html
+++ b/lab.html
@@ -51,18 +51,18 @@
 			<h3>About the University</h3>
 			<ul class="list-group">
 				<li class="list-group-item">
-					<a href="https://en.wikipedia.org/wiki/Pohang_University_of_Science_and_Technology" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a><br>
-					- 3.3 to 1 Undergraduate students per faculty<br>
-					- 105% Scholarship recipient rate<br>
-					- Annual educational expenditures of USD 74,900 per student					
+					<h5><a href="https://en.wikipedia.org/wiki/Pohang_University_of_Science_and_Technology" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a></h5>					
+					3.3 to 1 Undergraduate students per faculty<br>
+					105% Scholarship recipient rate<br>
+					Annual educational expenditures of USD 74,900 per student
 				</li>
-				<li class="list-group-item">
-					Ranked <mark>third best small university in the world, first in Asia</mark><br>
-					- By the Times Higher Education (THE), 2019 and 2020					
+				<li class="list-group-item mb-0">
+					<h5>Ranked <mark>third best small university in the world, first in Asia</mark></h5>
+					By the Times Higher Education (THE), 2019 and 2020					
 				</li>
-				<li class="list-group-item">
-					Ranked <mark>no. 1 in Asia among world’s most innovative universities</mark><br>
-					- By international news agency Reuters, 2019
+				<li class="list-group-item mb-0">
+					<h5>Ranked <mark>no. 1 in Asia among world’s most innovative universities</mark></h5>
+					By international news agency Reuters, 2019
 				</li>
 			</ul>
 		</div>
@@ -187,25 +187,25 @@
 					[CSED100] Introduction to Computer Science Engineering*<br>
 					[CSED703F] 3D Vision<br>
 				</li>
-				<li class="list-group-item">
+				<li class="list-group-item list-group-item-light">
 					<h5>2021 Spring</h5>
 					[AIGS101] Artifical Intelligence Basis I*<br>
 					[CSED538/AIGS538] Deep learning - <mark>Awarded as the best EduTech class by POSTECH</mark><br>
 				</li>
-				<li class="list-group-item">
+				<li class="list-group-item list-group-item-light">
 					<h5>2020 Fall</h5>
 					[AIGS101] Artifical Intelligence Basis II*<br>
 					[CSED100] Introduction to Computer Science Engineering*<br>
 					[CSED703F] 3D Vision<br>
 					[CSED800/AIGS800] CSE/GSAI Colloquium**<br>
 				</li>
-				<li class="list-group-item">
+				<li class="list-group-item list-group-item-light">
 					<h5>2020 Spring</h5>
 					[AIGS101] Artifical Intelligence Basis I*<br>
 					[AIGS537/CSED537] Artificial Intelligence & Data Science*<br>
 					[CSED233] Data Structure - <mark>Awarded as the outstanding online class by POSTECH</mark><br>
 				</li>
-				<li class="list-group-item">
+				<li class="list-group-item list-group-item-light">
 					<h5>2019 Fall</h5>
 					[CSED703F-01] 3D Vision<br>
 				</li>
@@ -218,40 +218,67 @@
 			<h3>Funding</h3>
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h5>IITP, Republic of Korea</h5>
-					[2021.05-2024.05] Image inpainting and synthesis<br>
+					<div class="d-flex w-100 justify-content-between">
+						<h5>IITP, Republic of Korea</h5>
+						2021.05-2024.05
+					</div>
+					<p class="mb-0">Image inpainting and synthesis</p>
 				</li>
 				<li class="list-group-item">
-					<h5>Samsung Electronics Corp.</h5>
-					[2021.05-2022.05] Camera localization<br>
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Samsung Electronics Corp.</h5>
+						2021.05-2022.05
+					</div>
+					<p class="mb-0">Camera localization</p>
 				</li>
 				<li class="list-group-item">
-					<h5>Intel Corp., USA</h5>
-					[2020.04-current] Team Open3D<br>
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Intel Corp., USA</h5>
+						2020.04-current
+					</div>
+					<p class="mb-0">Team Open3D</p>
 				</li>
 				<li class="list-group-item">
-					<h5>Ministry of Science and ICT, Republic of Korea</h5>
-					[2020.03-2023.03] 과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실<br>
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Ministry of Science and ICT, Republic of Korea</h5>
+						2020.03-2023.03
+					</div>
+					<p class="mb-0">과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실</p>
 				</li>
 				<li class="list-group-item">
-					<h5>POSTECH, Republic of Korea</h5>
-					[2019.04-2022.04] 포항공과대학교 신임교수 초기정착비<br>
+					<div class="d-flex w-100 justify-content-between">
+						<h5>POSTECH, Republic of Korea</h5>
+						2019.04-2022.04
+					</div>
+					<p class="mb-0">포항공과대학교 신임교수 초기정착비</p>
 				</li>
-				<li class="list-group-item">
-					<h5>Qualcomm Corp., USA</h5>
-					[2019.10-2021.10] Geometric perception<br>
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Qualcomm Corp., USA</h5>
+						2019.10-2021.10
+					</div>
+					<p class="mb-0">Geometric perception</p>
 				</li>
-				<li class="list-group-item">
-					<h5>Hyundai Motor Group</h5>
-					[2021.03-2021.09] LiDAR data augmentation<br>				
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Hyundai Motor Group</h5>
+						2021.03-2021.09
+					</div>
+					<p class="mb-0">LiDAR data augmentation</p>
 				</li>
-				<li class="list-group-item">
-					<h5>Microsoft Reserach Asia</h5>
-					[2020.06-2021.06] Content creation<br>
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Microsoft Reserach Asia</h5>
+						2020.06-2021.06
+					</div>
+					<p class="mb-0">3D content creation</p>					
 				</li>
-				<li class="list-group-item">
-					<h5>ETRI, Republic of Korea</h5>
-					[2020.03-2020.10] 3D human capturing system<br>
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>ETRI, Republic of Korea</h5>
+						2020.03-2020.10
+					</div>
+					<p class="mb-0">3D human capturing system</p>
 				</li>
 			</ul>
 		</div>
