--- a/academic_activities.html
+++ b/academic_activities.html
@@ -49,7 +49,7 @@
 	<div class="row gx-4 gy-4">
 		<div class="col-lg-6 text-start">
 			<h2>Program Committee</h2>
-			<ul class="list-group mb-4">
+			<ul class="list-group mb-4 shadow">
 				<li class="list-group-item">
 					<mark>Area Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2021<br>
 					<mark>Senior Program Committee</mark>, Int. Joint Conf. on Artificial Intelligence (IJCAI), 2021<br>
@@ -61,7 +61,7 @@
 				</li>
 			</ul>
 			<h2>Reviewer</h2>
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					<h4>International Conference</h4>
 					- ACM SIGGRAPH<br>
@@ -103,7 +103,7 @@
 		</div>
 		<div class="col-lg-6 text-start">
 			<h2>Awards</h2>
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					<h5><mark>Best EduTech Class</mark></h5>
 					Awarded to outstanding online class, POSTECH, Nov. 2021.
