--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</div>
 		<div class="col-lg-9">
 			<h1>Jaesik Park</h1>
-			<ul class="list-group mb-4">
+			<ul class="list-group mb-4 shadow">
 				<li class="list-group-item">
 					<p class="lead">Hello! I am an Assistant Professor at POSTECH. 
 					I am looking for self-motivated students to make <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together. 
@@ -58,7 +58,7 @@
 				</li>
 			</ul>
 			<h2>News</h2>
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					2021.12. <a href="https://github.com/isl-org/Open3D/releases/tag/v0.14.1"><b>Open3D 0.14 Release!</b></a> Tensorboard integration + hardware optimization + new geometry functions + recent 3D perception pipelines.
 				</li>				
@@ -82,7 +82,7 @@
 				</li>
 			</ul>
 			<p>
-				<button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
+				<button class="btn btn-outline-secondary shadow" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 					Previous &#9661;
 				</button>
 			</p>
