--- a/source/html/contact.html
+++ b/source/html/contact.html
@@ -2,7 +2,7 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<div class="col-lg-4 text-start">
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					<h3>Email</h3>
 					[my_first_name] [dot] [my_last_name] [at] postech.ac.kr
@@ -10,7 +10,7 @@
 			</ul>
 		</div>
 		<div class="col-lg-4 text-start">
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					<h3>To schedule a meeting</h3>
 					1) Please send me an email.<br>
@@ -20,7 +20,7 @@
 			</ul>
 		</div>
 		<div class="col-lg-4 text-start">
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					<h3>To apply our lab</h3>
 					1) Please send your CV to me via email.<br>
@@ -31,7 +31,7 @@
 			</ul>
 		</div>
 		<div class="col-12 text-start">
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					<h3>Office</h3>
 					Room 317, Chungam-Ro 77, Science Building Ⅱ, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br>
