--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -3,7 +3,7 @@
 	<div class="row gx-4 gy-4">
 		<div class="col-lg-6">
 			<h3>About the University</h3>
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					<h5><a href="https://en.wikipedia.org/wiki/Pohang_University_of_Science_and_Technology" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a></h5>					
 					3.3 to 1 Undergraduate students per faculty<br>
@@ -134,7 +134,7 @@
 	<div class="row gx-4 gy-4">
 		<div class="col-lg-6 text-start">
 			<h3>Teaching</h3>
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					<h5>2021 Fall</h5>
 					[AIGS101] Artifical Intelligence Basis II*<br>
@@ -170,7 +170,7 @@
 		</div>
 		<div class="col-lg-6 text-start">
 			<h3>Funding</h3>
-			<ul class="list-group">
+			<ul class="list-group shadow">
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>IITP, Republic of Korea</h5>
