weaker shadows on the boxes

--- a/about_me.html
+++ b/about_me.html
@@ -49,7 +49,7 @@
 	<div class="row gx-4 gy-4">
 		<div class="col-lg-6 text-start">
 			<h2> Work Experience</h2>
-			<ul class="list-group shadow">
+			<ul class="list-group shadow-sm">
 			<li class="list-group-item">
 				<h5>Adjunct Professor - Yonsei University</h5>
 				Seoul, Republic of Korea<br>
@@ -87,7 +87,7 @@
 		</div>
 		<div class="col-lg-6 gx-4 gy-4">
 			<h2> Education</h2>
-			<ul class="list-group shadow mb-4">
+			<ul class="list-group shadow-sm mb-4">
 			<li class="list-group-item">
 				<h5>Ph.D. in Electrical Engineering - KAIST</h5>
 				Advisor: <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">Prof. In So Kweon</a>, Co-Advisor: <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en" target="_blank">Dr. Yu-Wing Tai</a><br>
@@ -108,7 +108,7 @@
 			</li>
 			</ul>
 			<h2>Curriculum Vitae</h2>
-			<ul class="list-group shadow">
+			<ul class="list-group shadow-sm">
 			<li class="list-group-item">
 				Please download <a href="cv_jaesik_park.pdf" target="_blank">cv_jaesik_park.pdf</a>
 			</li>
