--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<div class="col-lg-4 text-start">
-			<ul class="list-group shadow">
+			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
 					<h3>Email</h3>
 					[my_first_name] [dot] [my_last_name] [at] postech.ac.kr
@@ -56,7 +56,7 @@
 			</ul>
 		</div>
 		<div class="col-lg-4 text-start">
-			<ul class="list-group shadow">
+			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
 					<h3>To schedule a meeting</h3>
 					1) Please send me an email.<br>
@@ -66,7 +66,7 @@
 			</ul>
 		</div>
 		<div class="col-lg-4 text-start">
-			<ul class="list-group shadow">
+			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
 					<h3>To apply our lab</h3>
 					1) Please send your CV to me via email.<br>
@@ -77,7 +77,7 @@
 			</ul>
 		</div>
 		<div class="col-12 text-start">
-			<ul class="list-group shadow">
+			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
 					<h3>Office</h3>
 					Room 317, Chungam-Ro 77, Science Building Ⅱ, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br>
