--- a/publications.html
+++ b/publications.html
@@ -100,10 +100,10 @@
 			<h4>Fast Point Transformer</h4>
 			<p class="text-muted">
 				Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and <b>Jaesik Park</b>.
-				<em>TBA (arXiv), 2021</em>
+				<em>2112.04702 (arXiv), 2021</em>
 			</p>
 			<p>
-				<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://arxiv.org/abs/2112.04702" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Fast_arXiv_2021" aria-expanded="false" aria-controls="Park_Fast_arXiv_2021">BibTeX</a>
 			</p>
 			<div class="collapse" id="Park_Fast_arXiv_2021">
@@ -113,7 +113,7 @@
 							@article{Park_Fast_arXiv_2021,<br>
 							Title={Fast Point Transformer},<br>
 							Author={Chunghyun Park and Yoonwoo Jeong and Minsu Cho and Jaesik Park},<br>
-							Journal={TBA (arXiv)},<br>
+							Journal={2112.04702 (arXiv)},<br>
 							Year={2021}<br>
 							}
 						</p>
