minor fix in lab.html

--- a/lab.html
+++ b/lab.html
@@ -166,13 +166,13 @@
 		<h3>Undergraduate Students (selected)</h3>
 		<div class="col-3 text-center">
 			<h5>Junghyuk Shin</h5>
-			Selected as the best undergraduate research project (최우수 UGRP)<br>
-			2020.07<br>
+			Selected as the best undergraduate research project<br>
+			(최우수 UGRP) 2020.07<br>
 		</div>
 		<div class="col-3 text-center">
 			<h5>Seoyeon Kim</h5>
-			Selected as the best research project (과제연구 최우수상) <br>
-			2021.07<br>
+			Selected as the best research project<br>
+			(과제연구 최우수상)	2021.07<br>
 		</div>
 	</div>
 </div>
