--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -12,7 +12,7 @@
 				</li>
 				<li class="list-group-item mb-0">
 					<h5>Ranked <mark>third best small university in the world, first in Asia</mark></h5>
-					By the Times Higher Education (THE), 2019 and 2020					
+					By the Times Higher Education (THE), 2019-2021
 				</li>
 				<li class="list-group-item mb-0">
 					<h5>Ranked <mark>no. 1 in Asia among world’s most innovative universities</mark></h5>
