adjust letter-spacing for long paper titles

--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,7 @@
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_tpami.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>HUMBI: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge</h4>
+			<h4 class="em-tight">HUMBI: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge</h4>
 			<p class="text-muted">
 				Jae Shin Yoon, Zhixuan Yu, <b>Jaesik Park</b>, and Hyun Soo Park.
 				<em>Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2021</em>
@@ -227,7 +227,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_arxiv6.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Real-time Registration and Reconstruction with Cylindrical LiDAR Images</h4>
+			<h4 class="em-tight">Real-time Registration and Reconstruction with Cylindrical LiDAR Images</h4>
 			<p class="text-muted">
 				Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and <b>Jaesik Park</b>.
 				<em>2112.02779 (arXiv), 2021</em>
@@ -280,7 +280,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_tog.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>TextureMe: High-quality Textured Scene Reconstruction in Real-time</h4>
+			<h4 class="em-tight">TextureMe: High-quality Textured Scene Reconstruction in Real-time</h4>
 			<p class="text-muted">
 				Jungeon Kim, Hyomin Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee.
 				<em>ACM Transactions on Graphics (<b>ToG</b>), 2021</em>
@@ -332,7 +332,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_neurips2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Brick-by-Brick: Combinatorial Construction with Deep Reinforcement Learning</h4>
+			<h4 class="em-tight">Brick-by-Brick: Combinatorial Construction with Deep Reinforcement Learning</h4>
 			<p class="text-muted">
 				Hyunsoo Chung, Jungtaek Kim, Boris Knyazev, Jinhwi Lee, Graham W. Taylor, <b>Jaesik Park</b>, and Minsu Cho.
 				<em>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021</em>
@@ -471,7 +471,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_scientific_reports.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features</h4>
+			<h4 class="em-tight">Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features</h4>
 			<p class="text-muted">
 				Taewon Jin, Taesoo Park, Ina Park, <b>Jaesik Park</b>*, and Ji Hoon Shim*.
 				<em>published by Nature Research (<b>Scientific Reports</b>), 2021</em>
@@ -499,7 +499,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_eurographics.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera</h4>
+			<h4 class="em-tight">Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera</h4>
 			<p class="text-muted">
 				Hyomin Kim, Jungeon Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee.
 				<em>42nd Annual Conference of the European Association for Computer Graphics (<b>EuroGraphics</b>), 2021</em>
@@ -678,7 +678,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/20_cvpr2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>High-Dimensional Convolutional Networks for Geometric Pattern Recognition</h4>
+			<h4 class="em-tight">High-Dimensional Convolutional Networks for Geometric Pattern Recognition</h4>
 			<p class="text-muted">
 				Christopher Choy, Junha Lee, Rene Ranftl, <b>Jaesik Park</b>, and Vladlen Koltun.
 				<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020</em>
@@ -941,7 +941,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/18_ras.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Real-time Head Pose Estimation using Multi-task Deep Neural Network</h4>
+			<h4 class="em-tight">Real-time Head Pose Estimation using Multi-task Deep Neural Network</h4>
 			<p class="text-muted">
 				Byungtae Ahn, Dong-Geol Choi, <b>Jaesik Park</b>, and In So Kweon.
 				<em>Robotics and Autonomous Systems (<b>RAS</b>), 2018</em>
@@ -1071,7 +1071,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/17_cgf.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Category Specific Salient View Selection via Deep Convolutional Neural Networks</h4>
+			<h4 class="em-tight">Category Specific Salient View Selection via Deep Convolutional Neural Networks</h4>
 			<p class="text-muted">
 				Seong heum Kim, Yu Wing Tai, Joon Young Lee, <b>Jaesik Park</b>, and In So Kweon.
 				<em>Computer Graphics Forum (<b>CGF</b>), 2017</em>
@@ -1114,7 +1114,7 @@
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/16_pami.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Robust Multiview Photometric Stereo using Planar Mesh Parameterization</h4>
+			<h4 class="em-tight">Robust Multiview Photometric Stereo using Planar Mesh Parameterization</h4>
 			<p class="text-muted">
 				<b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon.
 				<em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2016</em>
@@ -1171,7 +1171,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/16_cvpr_color.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Efficient and Robust Color Consistency for Community Photo Collections</h4>
+			<h4 class="em-tight">Efficient and Robust Color Consistency for Community Photo Collections</h4>
 			<p class="text-muted">
 				<b>Jaesik Park</b>, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon.
 				<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2016</em>
@@ -1397,7 +1397,7 @@
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/14_tip.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>High Quality Depth Map Upsampling and Completion for RGB-D Cameras</h4>
+			<h4 class="em-tight">High Quality Depth Map Upsampling and Completion for RGB-D Cameras</h4>
 			<p class="text-muted">
 				<b>Jaesik Park</b>, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon.
 				<em>IEEE Transaction on Image Processing (<b>TIP</b>), 2014</em>
@@ -1425,7 +1425,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/14_accv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Real-time Head Orientation from a Monocular Camera using Deep Neural Network</h4>
+			<h4 class="em-tight">Real-time Head Orientation from a Monocular Camera using Deep Neural Network</h4>
 			<p class="text-muted">
 				Byungtae Ahn, <b>Jaesik Park</b>, and In So Kweon.
 				<em>Asian Conference on Computer Vision (<b>ACCV</b>), 2014</em>
@@ -1451,7 +1451,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/14_icip.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>GMM-based Saliency Aggregation for Calibration-free Gaze Estimation</h4>
+			<h4 class="em-tight">GMM-based Saliency Aggregation for Calibration-free Gaze Estimation</h4>
 			<p class="text-muted">
 				Jinsoo Choi, Byungtae Ahn, <b>Jaesik Park</b>, and In So Kweon.
 				<em>International Conference on Image Processing (<b>ICIP</b>), 2014</em>
@@ -1477,7 +1477,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/14_cvpr_gm.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Exploiting Shading Cues in Kinect IR Images for Geometry Refinement</h4>
+			<h4 class="em-tight">Exploiting Shading Cues in Kinect IR Images for Geometry Refinement</h4>
 			<p class="text-muted">
 				Gyeongmin Choe*, <b>Jaesik Park</b>*, Yu-Wing Tai, and In So Kweon.
 				<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2014</em>
@@ -1591,7 +1591,7 @@
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/12_eccv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement</h4>
+			<h4 class="em-tight">Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement</h4>
 			<p class="text-muted">
 				<b>Jaesik Park</b>, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon.
 				<em>European Conference on Computer Vision (<b>ECCV</b>), 2012</em>
@@ -1618,7 +1618,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/12_icip.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Modeling Photo Composition and Its Application to Photo Re-arrangement</h4>
+			<h4 class="em-tight">Modeling Photo Composition and Its Application to Photo Re-arrangement</h4>
 			<p class="text-muted">
 				<b>Jaesik Park</b>, Joon-Young Lee, Yu-Wing Tai, and In So Kweon.
 				<em>International Conference on Image Processing (<b>ICIP</b>), 2012</em>
@@ -1688,7 +1688,7 @@
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/11_iros.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System</h4>
+			<h4 class="em-tight">A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System</h4>
 			<p class="text-muted">
 				Jiyoung Jung, Yekeun Jeong, <b>Jaesik Park</b>, Hyowon Ha, J. D. Kim, and In-So Kweon.
 				<em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2011</em>
