edit humbi paper information

--- a/publications.html
+++ b/publications.html
@@ -78,6 +78,7 @@
 			</p>
 			<p>
 				<a href="https://www.humbi-data.net/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="http://arxiv.org/abs/2110.00119" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Yoon_HUMBI_TPAMI_2021" aria-expanded="false" aria-controls="Yoon_HUMBI_TPAMI_2021">BibTeX</a>
 			</p>
 			<div class="collapse" id="Yoon_HUMBI_TPAMI_2021">
