--- a/publications.html
+++ b/publications.html
@@ -70,6 +70,32 @@
 <div class="container">
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
+			<img src="publications/data/21_tpami.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">HUMBI: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge</h4>
+			<p class="text-muted">
+				Jae Shin Yoon, Zhixuan Yu, <b>Jaesik Park</b>, and Hyun Soo Park.
+				<em>Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2021</em>
+			</p>
+			<p>
+				<a href="https://www.humbi-data.net/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="http://arxiv.org/abs/2110.00119" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Yoon_HUMBI_TPAMI_2021" aria-expanded="false" aria-controls="Yoon_HUMBI_TPAMI_2021">BibTeX</a>
+			</p>
+			<div class="collapse" id="Yoon_HUMBI_TPAMI_2021">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Yoon_HUMBI_TPAMI_2021,<br>
+							Title={HUMBI: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge},<br>
+							Author={Jae Shin Yoon and Zhixuan Yu and Jaesik Park and Hyun Soo Park},<br>
+							Journal={Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Instance-wise Occlusion and Depth Orders in Natural Scenes</h4>
 			<p class="text-muted">
@@ -471,14 +497,9 @@
 				</div>
 			</div>
 		</div>
-<<<<<<< HEAD
-		<div class="col-lg-4 text-center">			<img src="publications/data/21_eurographics.jpg" class="mb-3 img-fluid rounded float-center img-thumbnail">
-			<h4>Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera</h4>
-=======
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_eurographics.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera</h4>
->>>>>>> e47d077 (adjust letter-spacing for long paper titles)
 			<p class="text-muted">
 				Hyomin Kim, Jungeon Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee.
 				<em>42nd Annual Conference of the European Association for Computer Graphics (<b>EuroGraphics</b>), 2021</em>
