--- a/lab.html
+++ b/lab.html
@@ -164,15 +164,25 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<h3>Undergraduate Students (selected)</h3>
-		<div class="col-3 text-center">
+		<div class="col-2 text-center">
 			<h5>Junghyuk Shin</h5>
-			Selected as the best undergraduate research project<br>
-			(최우수 UGRP) 2020.07<br>
+			Selected as the best undergraduate research project (최우수 UGRP) 2020.07<br>
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-2 text-center">
 			<h5>Seoyeon Kim</h5>
-			Selected as the best research project<br>
-			(과제연구 최우수상)	2021.07<br>
+			Selected as the best research project (과제연구 최우수상) 2021.07<br>
+		</div>
+		<div class="col-2 text-center">
+			<h5>Hansheng Guo</h5>
+			The Chinese University of Hong Kong (exchange student at POSTECH)<br>
+		</div>
+		<div class="col-2 text-center">
+			<h5>Pierre E. MUSACCHIO</h5>
+			École Nationale Supérieure de Cognitique (exchange student at POSTECH)<br>
+		</div>
+		<div class="col-2 text-center">
+			<h5>Vansh Gupta</h5>
+			Indian Institute of Technology, Delhi (exchange student at POSTECH)<br>
 		</div>
 	</div>
 </div>
