--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -128,7 +128,7 @@
 		</div>
 		<div class="col-2 text-center">
 			<h5>Hansheng Guo</h5>
-			The Chinese University of Hong Kong (exchange student at POSTECH)<br>
+			The Chinese University of Hong Kong (exchange student at POSTECH) 2021<br>
 		</div>
 		<div class="col-2 text-center">
 			<h5>Pierre E. MUSACCHIO</h5>
