--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,10 @@
 <div class="container"> <!-- begin of publication list -->
 
 <div class="container mt-4">
+	<hr class="py-1">
+</div>
+
+<div class="container mt-4">
 <div class="row">
 	<div class="col-lg-12 text-start">
 		<h2>2021</h2>
