minor fixes and updates

--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -105,6 +105,7 @@
 			<h5>Jaebong Jeong</h5>
 			2021 Fall<br>
 			Master degree<br>
+			Joined a stealth mode startup
 		</div>		
 		<div class="col-3 text-center">
 			<img src="source/images/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
