update class and funding

--- a/lab.html
+++ b/lab.html
@@ -193,6 +193,11 @@
 			<h3>Teaching</h3>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					<h5>2022 Spring</h5>
+					[AIGS101] Artifical Intelligence Basis I*<br>
+					[CSED233] Data Structure<br>
+				</li>
+				<li class="list-group-item list-group-item-light">
 					<h5>2021 Fall</h5>
 					[AIGS101] Artifical Intelligence Basis II*<br>
 					[CSED100] Introduction to Computer Science Engineering*<br>
@@ -262,6 +267,13 @@
 						2019.04-2022.04
 					</div>
 					<p class="mb-0">포항공과대학교 신임교수 초기정착비</p>
+				</li>
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Select Star, Republic of Korea</h5>
+						2021.03-2021.11
+					</div>
+					<p class="mb-0">InstaOrder dataset collection</p>
 				</li>
 				<li class="list-group-item list-group-item-light">
 					<div class="d-flex w-100 justify-content-between">
