--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2022.01. Our paper about comprehensive point cloud refinement and reconstruction is accepted to <b>ICLR 2022</b>.
+				</li>
+				<li class="list-group-item">
 					2021.12. <a href="https://humbi-data.net" target="_blank"><b>HUMBI</b></a>: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge is accepted to <b>TPAMI</b>.
 				</li>	
 				<li class="list-group-item">
