--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -187,6 +187,21 @@
 		<div class="col-lg-6 text-start">
 			<h3>Funding</h3>
 			<ul class="list-group shadow-sm">
+				<!-- Ongoing projects -->
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Qualcomm Corp., USA</h5>
+						2022.02-2023.02
+					</div>
+					<p class="mb-0">Visual common sense (planned)</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Osstem Implant, Republic of Korea</h5>
+						2022.02-2022.06
+					</div>
+					<p class="mb-0">High-quality 3D reconstruction (planned)</p>
+				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>IITP, Republic of Korea</h5>
@@ -221,6 +236,14 @@
 						2019.04-2022.04
 					</div>
 					<p class="mb-0">포항공과대학교 신임교수 초기정착비</p>
+				</li>				
+				<!-- Finished projects -->
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Osstem Implant, Republic of Korea</h5>
+						2021.07-2021.12
+					</div>
+					<p class="mb-0">High-quality 3D reconstruction</p>
 				</li>
 				<li class="list-group-item list-group-item-light">
 					<div class="d-flex w-100 justify-content-between">
@@ -234,7 +257,7 @@
 						<h5>Qualcomm Corp., USA</h5>
 						2019.10-2021.10
 					</div>
-					<p class="mb-0">Geometric perception</p>
+					<p class="mb-0">Geometric perception from videos and images</p>
 				</li>
 				<li class="list-group-item list-group-item-light">
 					<div class="d-flex w-100 justify-content-between">
