--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -120,25 +120,33 @@
 	<div class="row gx-4 gy-4">
 		<h3>Undergraduate Students (selected)</h3>
 		<div class="col-2 text-center">
-			<h5>Junghyuk Shin</h5>
-			Selected as the best undergraduate research project (최우수 UGRP) 2020.07<br>
+			<h5>Vansh Gupta</h5>
+			Indian Institute of Technology, Delhi (exchange student at POSTECH)<br>
 		</div>
 		<div class="col-2 text-center">
-			<h5>Seoyeon Kim</h5>
-			Selected as the best research project (과제연구 최우수상) 2021.07<br>
+			<h5>Jinmo Kim</h5>
+			Selected as the best undergraduate research project (최우수 UGRP) 2022.02<br>
 		</div>
 		<div class="col-2 text-center">
-			<h5>Hansheng Guo</h5>
-			The Chinese University of Hong Kong (exchange student at POSTECH) 2021<br>
+			<h5>Seoyoung Choi</h5>
+			Selected as the best undergraduate research project (최우수 UGRP) 2022.02<br>
 		</div>
 		<div class="col-2 text-center">
 			<h5>Pierre E. MUSACCHIO</h5>
 			École Nationale Supérieure de Cognitique (exchange student at POSTECH)<br>
 		</div>
 		<div class="col-2 text-center">
-			<h5>Vansh Gupta</h5>
-			Indian Institute of Technology, Delhi (exchange student at POSTECH)<br>
+			<h5>Hansheng Guo</h5>
+			The Chinese University of Hong Kong (exchange student at POSTECH) 2021<br>
 		</div>
+		<div class="col-2 text-center">
+			<h5>Seoyeon Kim</h5>
+			Selected as the best research project (과제연구 최우수상) 2021.07<br>
+		</div>
+		<div class="col-2 text-center">
+			<h5>Junghyuk Shin</h5>
+			Selected as the best undergraduate research project (최우수 UGRP) 2020.07<br>
+		</div>		
 	</div>
 </div>
 <div class="container mt-4">
@@ -201,6 +209,13 @@
 						2022.02-2022.06
 					</div>
 					<p class="mb-0">High-quality 3D reconstruction (planned)</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>MCST, Republic of Korea</h5>
+						2021.06-2023.12
+					</div>
+					<p class="mb-0">문화체육관광부, 포스텍-한예종 문화기술선도대학원</p>
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
