--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -245,10 +245,10 @@
 					</div>
 					<p class="mb-0">과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실</p>
 				</li>
-				<li class="list-group-item">
+				<li class="list-group-item list-group-item-light">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>POSTECH, Republic of Korea</h5>
-						2019.04-2022.04
+						2019.04-2022.02
 					</div>
 					<p class="mb-0">포항공과대학교 신임교수 초기정착비</p>
 				</li>				
