--- a/publications.html
+++ b/publications.html
@@ -1128,7 +1128,7 @@
 			</p>
 			<p>
 				<a href="http://vladlen.info/publications/fast-global-registration/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-				<a href="publications/data/17_siggraph.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="http://vladlen.info/papers/fast-global-registration.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/IntelVCL/FastGlobalRegistration" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Zhou_Fast_ECCV_2016" aria-expanded="false" aria-controls="Zhou_Fast_ECCV_2016">BibTeX</a>
 			</p>
