--- a/source/html/index.html
+++ b/source/html/index.html
@@ -20,6 +20,9 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2022.02. I will serve as an Area Chair for <b>ECCV 2021</b>.
+				</li>
+				<li class="list-group-item">
 					2022.01. Our paper about comprehensive point cloud refinement and reconstruction is accepted to <b>ICLR 2022</b>.
 				</li>
 				<li class="list-group-item">
@@ -36,13 +39,7 @@
 				</li>
 				<li class="list-group-item">
 					2021.10. A paper about real-time colored scene reconstruction got accepted to <b>Transactions on Graphics</b>.
-				</li>
-				<li class="list-group-item">
-					2021.09. Two papers got accepted to <b>NeurIPS 2021</b>.
-				</li>
-				<li class="list-group-item">
-					2021.07. Three papers got accepted to <b>ICCV 2021</b>.
-				</li>
+				</li>				
 			</ul>
 			<p>
 				<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
@@ -51,6 +48,12 @@
 			</p>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2021.09. Two papers got accepted to <b>NeurIPS 2021</b>.
+					</li>
+					<li class="list-group-item">
+						2021.07. Three papers got accepted to <b>ICCV 2021</b>.
+					</li>
 					<li class="list-group-item">
 						2021.07. ContraGAN project (NeurIPS 2020) is awarded as one of the <b>POSTECH's representative research achievements</b>.
 					</li>
